penambahan dokumentasi swagger pada login input dan group
